# sipin-sip-delivery-registrator

./: .copier-answers.yml  .env.example  .gitmodules  README.md  config.yml  main.py  pyproject.toml
.openshift/: Jenkinsfile  Makefile  sipin-sip-delivery-registrator-multibranch-pipeline.xml  sipin-sip-delivery-registrator-template.yml
app/: __init__.py  app.py
app/services/: db.py  pulsar.py
tests/containers/: conftest.py  producer.py  test_event_listener.py  test_graceful_shutdown.py
