[project]
name = "sipin-sip-delivery-registrator"
version = "0.0.1"
description = "Listens to deliveries of incoming SIP packages and registers the deliveries in a database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "viaa-chassis",
    "pulsar-client",
    "psycopg",
    "meemoo-cloudevents==0.1.0-rc.3",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--rootdir=./app/ -v"
testpaths = ["tests"]
